Requires writing permission to sdcard for debugging

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,4 +25,6 @@
         <activity android:label="@string/categories" android:name=".CategoriesActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
