--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-	<activity android:label="@string/categories" android:name=".CategoriesActivity" android:windowSoftInputMode="adjustPan"	></activity>
+        <activity
+            android:name=".CategoriesActivity"
+            android:label="@string/categories"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
+            android:name=".StatisticsActivity"
+            android:label="@string/title_activity_statistics" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
